# meeseeql

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  config_example.yaml  pyproject.toml  wishlist.md
.github/workflows/: release.yml  test.yml
src/meeseeql/: database_manager.py  main.py  sql_transformer.py
src/meeseeql/tools/: __init__.py  describe_table.py  execute_query.py  fuzzy_search.py  list_databases.py  reload_config.py  sample_table.py  search.py  search_tables.py  show_database_config.py  sql_utils.py  table_summary.py  test_connection.py
src/meeseeql/tools/sql/mssql/: columns.sql  enum_values.sql  foreign_key.sql  fuzzy.sql  primary_key.sql  search.sql  table_exists.sql
src/meeseeql/tools/sql/mysql/: columns.sql  enum_values.sql  foreign_key.sql  fuzzy.sql  primary_key.sql  search.sql  table_exists.sql
src/meeseeql/tools/sql/postgresql/: columns.sql  enum_values.sql  foreign_key.sql  fuzzy.sql  primary_key.sql  search.sql  table_exists.sql
src/meeseeql/tools/sql/snowflake/: columns.sql  foreign_key.sql  fuzzy.sql  primary_key.sql  search.sql  table_exists.sql
tests/: test_config.yaml  test_password_provider.py  test_sql_transformer.py  test_sql_transformer_table_access.py
tests/database_manager/: test_available_tools.py  test_config_validation.py  test_database_manager_passwords.py  test_integration_database_manager.py  test_url_generation.py
tests/tools/: test_describe_table.py  test_execute_query.py  test_fuzzy_search.py  test_list_databases.py  test_reload_config.py  test_sample_table.py  test_search.py  test_search_tables.py  test_show_database_config.py  test_table_summary.py
(+7 files in other folders)
