[project]
name = "meeseeql"
version = "1.1.0"
description = "A FastMCP server for exploring SQL databases"

requires-python = ">=3.11"

authors = [
    { name = "Thomas Smith", email = "thomas@apolloagriculture.com" },
]
license = { text = "MIT" }
license-files = ["LICENSE"]
readme = "README.md"
homepage = "https://github.com/txsmith/meeseeql"
keywords = ["mcp", "database", "sql", "fastmcp", "postgresql", "mysql", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.10.5",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pyodbc>=4.0.39",
    "snowflake-sqlalchemy>=1.4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.28.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "sqlglot[rs]>=25.0.0",
]

[project.scripts]
meeseeql = "meeseeql.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "flake8>=6.0.0",
    "black>=25.1.0",
    "pre-commit>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meeseeql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
